@@ -8,7 +8,7 @@
 # Load the file with command-line 
 # option -init-file mediawiki.init
 #
-# $Id: mediawiki.init,v 1.4 2005-08-22 19:26:10 dprice Exp $
+# $Id: mediawiki.init,v 1.5 2007-10-07 13:22:46 pertusus Exp $
 
 ######################################################################
 # The following variables can also be set by command-line options
@@ -190,6 +190,9 @@ sub mediawiki_print_Top
     {
         # top-level node is fully enclosed in @ifnothtml
         # print fulltitle, subtitle, author, Overview
+        # redo the titlepage with the actual state
+        my ($titlepage_text, $titlepage_no_texi) = main::do_special_region_lines('titlepage',$Texi2HTML::THISDOC{'state'});
+        &$titlepage([],$titlepage_text, $titlepage_no_texi); 
         print $fh $Texi2HTML::TITLEPAGE;
         if (@{$Texi2HTML::OVERVIEW})
         {
@@ -212,6 +215,10 @@ sub mediawiki_print_misc
 
 sub mediawiki_titlepage()
 {
+    my $titlepage_lines = shift;
+    my $titlepage_text = shift;
+    my $titlepage_no_texi = shift;
+
     my $result = '';
     if (@{$Texi2HTML::THISDOC{'titles'}} 
         or @{$Texi2HTML::THISDOC{'subtitles'}} 
@@ -232,7 +239,7 @@ sub mediawiki_titlepage()
         $result .= "$DEFAULT_RULE\n" if $DEFAULT_RULE;
     }
 
-    $Texi2HTML::TITLEPAGE = $result . $Texi2HTML::TITLEPAGE;
+    $Texi2HTML::TITLEPAGE = $result . $titlepage_text;
 }
 
 sub mediawiki_titlefont($$$)
